# text2semantic

./: .gitignore  README.md  pyproject.toml
finetuning/: README.md  __init__.py  dataset.py  prepare_data.py  sft_12hz.py  train.py
qwen_tts/: __init__.py  semantic_codec.py  text_template.py
qwen_tts/core/models/: __init__.py  configuration_qwen3_tts.py  configuration_text2semantic.py  modeling_qwen3_tts.py  modeling_text2semantic.py
qwen_tts/core/models/speaker/: __init__.py  conformer_encoder.py  encoder.py  perceiver.py  utils.py
qwen_tts/core/models/speaker/conformer/: __init__.py  attention.py  embedding.py  subsampling.py
qwen_tts/core/tokenizer_12hz/: modeling_qwen3_tts_tokenizer_v2.py
qwen_tts/inference/: qwen3_tts_model.py  qwen3_tts_tokenizer.py  text2semantic_model.py
tests/: test_text2semantic.py  test_training.py
