[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2semantic"
version = "0.1.0"
description = "Qwen3-TTS 12Hz autoregressive text-to-semantic training"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "accelerate==1.12.0",
    "huggingface-hub",
    "librosa",
    "numpy",
    "safetensors",
    "soundfile",
    "tensorboard",
    "torch",
    "transformers==4.57.3",
]

[tool.setuptools.packages.find]
include = ["qwen_tts*"]
