[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2semantic"
version = "0.1.0"
description = "Qwen3.5 autoregressive MaskGCT text-to-semantic training"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "accelerate==1.12.0",
    "einops>=0.8.1",
    "huggingface-hub",
    "librosa",
    "numpy",
    "packaging",
    "python-dotenv",
    "pyyaml>=6.0",
    "safetensors",
    "soundfile",
    "torch",
    "transformers==5.8.1",
    "wandb",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["finetuning*", "qwen_tts*"]
